# OpenLeukemia

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  PROJECT_CHARTER.md  README.md  ROADMAP.md  package-lock.json  package.json
.cursor/rules/: ai-service.mdc  consents.mdc  docs.mdc  frontend.mdc  ml.mdc  project.mdc  supabase.mdc
.github/: copilot-instructions.md
.github/instructions/: ai-service.instructions.md  consents.instructions.md  docs.instructions.md  frontend.instructions.md  ml.instructions.md  supabase.instructions.md
.github/workflows/: ci.yml  pages.yml  reviewer.yml
ai-service/: CLAUDE.md  README.md  pyproject.toml
ai-service/app/: CLAUDE.md  __init__.py  main.py
ai-service/app/api/: CLAUDE.md  health.py
ai-service/app/api/v1/: CLAUDE.md  consents.py
ai-service/app/domains/: CLAUDE.md
ai-service/app/domains/consents/: CLAUDE.md  __init__.py  schemas.py  service.py
ai-service/tests/: CLAUDE.md  test_consents.py
docs/: CLAUDE.md  README.md
docs-site/: docusaurus.config.js  package.json  sidebars.js
docs-site/docs/: ai-safety.md  architecture.md  consent-and-privacy.md  development.md  getting-started.md  intro.md
frontend/: CLAUDE.md  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: CLAUDE.md  main.tsx
ml/: CLAUDE.md  README.md
ml/evaluation/: CLAUDE.md
ml/inference/: CLAUDE.md
ml/notebooks/: CLAUDE.md
ml/training/: CLAUDE.md
scripts/: copy-docs-build.mjs  dev-all.mjs  verify-dev-docs-proxy.mjs
supabase/: CLAUDE.md  README.md
supabase/functions/: CLAUDE.md  README.md
(+21 files in other folders)
